--- a/Etch-A-Sketch.css
+++ b/Etch-A-Sketch.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
     font-family: 'Chivo Mono';
-    background-color: red;
+    background-color: rgb(237, 179, 233);
 }
 /*
 .rowcontainer{
@@ -19,8 +19,8 @@
 */
 button{
     background-color: aqua;
-    height: 100px;
-    width: 30px;
+    height: 50px;
+    width: 80px;
 }
 
 .grid-item {
