--- a/Etch-A-Sketch.css
+++ b/Etch-A-Sketch.css
@@ -3,20 +3,7 @@
     font-family: 'Chivo Mono';
     background-color: rgb(237, 179, 233);
 }
-/*
-.rowcontainer{
-    width: 100%;
-    height: 30px;
-}
 
-.name{
-    line-height: 30px;
-    float: left;
-    width: 60%;
-    height: 100%;
-    padding-left: 15px
-}
-*/
 button{
     background-color: aqua;
     height: 50px;
@@ -53,3 +40,15 @@ button{
     padding: 2.5 rem;
     width: 100%;
 }
+
+#grid-container {
+    width: 960px;
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid #000;
+  } 
+
+.grid-square {
+    border: 1px solid #ddd;
+    box-sizing: border-box;
+  }
