--- a/Etch-A-Sketch.css
+++ b/Etch-A-Sketch.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
     font-family: 'Chivo Mono';
-    background-color: rgb(237, 179, 233);
+    background-color: rgb(246, 246, 246);
 }
 
 button{
@@ -45,10 +45,86 @@ button{
     width: 960px;
     display: flex;
     flex-wrap: wrap;
-    border: 1px solid #000;
-  } 
+    padding: 0;
+    margin: 0 auto;
+    box-sizing: border-box;
+}  
+
+#grid-container:hover{
+    background-color: aqua;
+}
+
+#grid-container.active{
+    background-color: green;
+}
 
 .grid-square {
     border: 1px solid #ddd;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+  
+.grid-square:hover{
+    background-color: aqua;
+}
+
+.grid-square.active{
+    background-color: green;
+}
+
+.square {
+    width: 50px;
+    height: 50px;
+    background-color: rgb(0, 0, 0);
+    opacity: 1; 
   }
+
+.bottom_container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    gap: 1rem;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.circle {
+    width: 48px;
+    height: 48px;
+    background: radial-gradient(circle, rgba(213, 211, 222, 1) 50%,rgba(100, 100, 110, 1) 100%);
+    border: 4px; 
+    border-radius: 50%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3), inset 0 2px 4px rgba(255, 255, 255, 0.5);
+}
+
+/* .setting {
+    position: absolute;
+    background: #E73C49;
+    width: 300px;
+    height: 250px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+} */
+
+/*.setting:hover, #color-picker:hover {
+    border: 2px solid rgb(23, 23, 23);
+}
+
+.setting:hover {
+    background-color: rgb(11, 10, 10);
+    color: var(--white-color);
+}
+
+ #color-picker {
+    width: 100%;
+    height: calc(2rem + 20px);
+    cursor: pointer;
+    border: none;
+    border-radius: 5%;
+    transition: all 0.3s ease-in-out;
+} */
